# microbitv2_display-text-rtic

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
