[package]
name = "display-text-rtic"
version = "0.1.0"
edition = "2018"

[dependencies]

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
panic-halt = "0.2.0"
defmt-rtt = "0.4.0"
defmt = "0.3.5"
rtic = { version = "2.0.0", features = ["thumbv7-backend"] }
microbit-text = "1.0.0"
microbit-v2 = "0.13.0"
